# yousofmersal.com

services/server/: Cargo.toml  README.md
services/server/src/: main.rs
services/server/src/db/: db.rs
services/yousofmersal_client/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  recipe.json
services/yousofmersal_client/.cargo/: config.toml
services/yousofmersal_client/.github/workflows/: main.yml
services/yousofmersal_client/public/assets/tailwind/: tailwind.config.js  tailwindcss.config.js
services/yousofmersal_client/src/: main.rs
services/yousofmersal_client/src/components/: content.rs  footer.rs  icon.rs  mod.rs  navbar.rs
services/yousofmersal_client/src/hooks/: mode.rs
services/yousofmersal_client/src/pages/: _404.rs  starter.rs
services/yousofmersal_client/tailwind/: tailwind.config.js
