[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tokio", "tracing", "macros", "http2", "ws"] }
chrono = "0.4.31"
sqlx = { version = "0.7.2", features = ["sqlite", "postgres", "mysql", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "parking_lot"] }
tower-http = { version = "0.4.4", features = ["trace", "full"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot", "env-filter"] }
