[package]
name = "yousofmersal_client"
version = "0.1.0"
edition = "2021"
authors = ["Yousof Mersal <yousof777@gmail.com>"]
description = "A client for yousofmersal.com"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
dioxus = {version = "0.3.2", features = ["hot-reload"] }
dioxus-web = { version = "0.3.1" }
dioxus-router = { version = "0.3.0"}
fermi = { version = "0.3.0" }
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["Storage"] }
# dioxus-free-icons = {version = "0.6.0", featuers = ["font-awesome-solid", "font-awesome-brands"]}
dioxus-material-icons = {version = "1.0.2"}
dioxus-toast = { git = "https://github.com/YousofMersal/dioxus-toast", default-features = false, features = ["web"] }
gloo = "0.8.0"
log = "0.4.17"
wasm-logger = "0.2.0"
anyhow = "1.0.69"
urlencoding = "2.1.2"
pulldown-cmark = "0.9.2"
dioxus-use-storage = { git = "https://github.com/YousofMersal/dioxus-hooks" }
